2014-10-12  Sergio Villar Senin  <svillar@igalia.com>

        [SOUP] [WK2] WebProcess and NetworkProcess initialization clears cache contents
        https://bugs.webkit.org/show_bug.cgi?id=137489

        Reviewed by Carlos Garcia Campos.

        Temporarily set the SoupCache's maximum size to a huge value
        before calling soup_cache_load() so that the cache is not shrinked
        to the default value.

        * NetworkProcess/soup/NetworkProcessSoup.cpp:
        (WebKit::NetworkProcess::platformInitializeNetworkProcess):
        * WebProcess/soup/WebProcessSoup.cpp:
        (WebKit::WebProcess::platformInitializeWebProcess):

2014-10-08  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Make forwarding headers generation depend on source code
        https://bugs.webkit.org/show_bug.cgi?id=137394

        Reviewed by Philippe Normand.

        Only run generate-forwarding-headers.pl when source code changes
        and use a different target for the symlinks.

        * PlatformGTK.cmake:

2014-09-30  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Move GtkPopupMenu implementation to WebPopupMenuProxyGtk
        https://bugs.webkit.org/show_bug.cgi?id=137193

        Reviewed by Gustavo Noronha Silva.

        GtkPopupMenu was in platform only to have a common implementation to
        be shared with WebKit1. Now that it's only used by
        WebPopupMenuProxyGtk in WebKit2, we can simplify the code by
        merging the implementation directly into WebPopupMenuProxyGtk.

        * UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
        (WebKit::WebPopupMenuProxyGtk::WebPopupMenuProxyGtk):
        (WebKit::WebPopupMenuProxyGtk::~WebPopupMenuProxyGtk):
        (WebKit::WebPopupMenuProxyGtk::populatePopupMenu):
        (WebKit::WebPopupMenuProxyGtk::showPopupMenu):
        (WebKit::WebPopupMenuProxyGtk::hidePopupMenu):
        (WebKit::WebPopupMenuProxyGtk::typeAheadFind):
        (WebKit::WebPopupMenuProxyGtk::resetTypeAheadFindState):